# cto_sec_incoming

./: .env  .gitignore  pyproject.toml
app/: data.csv  date_format.ipynb  db.sqlite3  incoming.csv
app/cf/: settings.py  urls.py
app/incomings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/incomings/management/commands/: add_data.py
app/incomings/migrations/: 0001_initial.py  0002_alter_incoming_ref.py  0002_remove_incoming_contact_name_remove_incoming_dated_and_more.py  0003_delete_status_alter_changestatus_incoming_and_more.py  0004_alter_changestatus_date_alter_incoming_ref.py  0005_alter_changestatus_options_alter_incoming_ref.py  0006_alter_changestatus_date_alter_incoming_received_on_and_more.py  0007_incoming_slug_alter_incoming_ref.py  0008_alter_incoming_ref.py  0009_incoming_letter_dated_alter_incoming_ref.py  0010_alter_incoming_received_on_alter_incoming_ref.py  0011_remove_incoming_file1_changestatus_file_and_more.py  0012_alter_incoming_ref.py
app/templates/: base.html  nav.html
app/templates/incomings/: changestatus_form.html  incoming_detail.html  incoming_form.html  incoming_list.html
