[project]
name = "incoming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.2",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]
